<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".ui.ResultActivity"
    android:gravity="center|top"
    android:padding="10dp">
    <TextView
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/result"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src = "@drawable/trophy"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/trophy_image"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/congratulations"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text=""
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#D3D3D3"
        android:text=""
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/result_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/finish"/>

</androidx.appcompat.widget.LinearLayoutCompat>